<resources>
    <string name="app_name">CattasticApp</string>
    <string name="cattastic">Cattastic</string>
    <string name="login_page">Login Page</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_page">Register Page</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="biometric_log_in">Biometric Log In</string>
    <string name="default_web_client_id">537249133441-9hri048fqh54392vut11r98df60t9ddb.apps.googleusercontent.com</string>
    <string name="registration_page">Registration Page</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cattastic</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_nav_drawer" />
    <string name="sign_out">Sign Out</string>
    <string name="cat_breeds">Cat Breeds</string>
    <string name="shelter_map">Shelter Map</string>
    <string name="temperament">Temperament:</string>
    <string name="origin">Origin:</string>
    <string name="life_span">Life Span:</string>
    <string name="weight">Weight:</string>
    <string name="dog_friendly">Dog Friendly:</string>
    <string name="energy_level">Energy Level:</string>
    <string name="affection_level">Affection Level:</string>
    <string name="shedding_level">Shedding Level:</string>
    <string name="grooming">Grooming:</string>
    <string name="health_issues">Health Issues:</string>
    <string name="intelligence">Intelligence:</string>
    <string name="social_needs">Social Needs:</string>
    <string name="stranger_friendly">Stranger Friendly:</string>
    <string name="learn_more_on_wikipedia">Learn more on Wikipedia</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="or_log_in_with">---Or Log in with---</string>
    <string name="enable_push_notifications">Enable Push Notifications</string>
    <string name="about_cattastic">About Cattastic</string>
    <string name="cattastic_is_your_one_stop_app_for_all_things_related_to_cats_learn_about_different_breeds_find_shelters_and_explore_features_that_will_help_you_adopt_and_care_for_your_feline_friends">Cattastic is your one-stop app for all things related to cats. Learn about different breeds, find shelters, and explore features that will help you adopt and care for your feline friends.</string>
    <string name="language_change">Language Change</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>

