<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:scrollbars="vertical">

    <ImageView
        android:id="@+id/breedDetailImageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/breedDetailNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:paddingTop="8dp" />

    <TextView
        android:id="@+id/breedDetailDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp" />

    <TextView
        android:id="@+id/breedDetailTemperamentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/temperament" />

    <TextView
        android:id="@+id/breedDetailOriginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/origin" />

    <TextView
        android:id="@+id/breedDetailLifeSpanTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/life_span" />

    <TextView
        android:id="@+id/breedDetailWeightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/weight" />

    <TextView
        android:id="@+id/breedDetailDogFriendlyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/dog_friendly" />

    <TextView
        android:id="@+id/breedDetailEnergyLevelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/energy_level" />

    <TextView
        android:id="@+id/breedDetailAffectionLevelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/affection_level" />

    <TextView
        android:id="@+id/breedDetailSheddingLevelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/shedding_level" />

    <TextView
        android:id="@+id/breedDetailGroomingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/grooming" />

    <TextView
        android:id="@+id/breedDetailHealthIssuesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/health_issues" />

    <TextView
        android:id="@+id/breedDetailIntelligenceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/intelligence" />

    <TextView
        android:id="@+id/breedDetailSocialNeedsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/social_needs" />

    <TextView
        android:id="@+id/breedDetailStrangerFriendlyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/stranger_friendly" />

    <TextView
        android:id="@+id/breedDetailWikipediaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/learn_more_on_wikipedia"
        android:textColor="#0277BD" />
</LinearLayout>
