<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

  <!-- Switch for Theme -->
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/dark_theme"
      android:textSize="16sp"
      android:paddingBottom="8dp" />

  <Switch
      android:id="@+id/switchTheme"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:minHeight="48dp"
      android:text="@string/enable_dark_mode"
      tools:ignore="UseSwitchCompatOrMaterialXml" />
  <!-- Push Notifications Switch -->
  <Switch
      android:id="@+id/switchNotifications"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:minHeight="48dp"
      android:text="@string/enable_push_notifications"
      tools:ignore="UseSwitchCompatOrMaterialXml" />
  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/language_change"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.155" />

  <Spinner
      android:id="@+id/spinner"
      android:layout_width="344dp"
      android:layout_height="62dp"
      android:entries="@array/languages"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView"
      app:layout_constraintVertical_bias="0.09" />

</LinearLayout>
