<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/catback"
    android:padding="16dp"
    tools:context=".Login">

    <!-- CardView for Email, Password Inputs, and Buttons -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:elevation="10dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Title Text -->
            <TextView
                android:id="@+id/tvLoginPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_page"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Email Input -->
            <EditText
                android:id="@+id/edEmail"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/black"
                android:hint="@string/email"
                android:drawableStart="@drawable/baseline_email_24"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLoginPage"
                app:layout_constraintWidth_percent="1.0"
                tools:ignore="VisualLintTextFieldSize" />

            <!-- Password Input -->
            <EditText
                android:id="@+id/edPassword"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/black"
                android:hint="@string/password"
                android:drawableStart="@drawable/baseline_password_24"
                android:inputType="textPassword"
                android:padding="10dp"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edEmail"
                app:layout_constraintWidth_percent="1.0"
                tools:ignore="VisualLintTextFieldSize" />

            <!-- Forgot Password TextView -->
            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@android:color/black"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edPassword"
                android:layout_marginTop="4dp"
                android:paddingEnd="16dp"
                tools:ignore="RtlSymmetry" />

            <!-- Login Button -->
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/black"
                android:paddingHorizontal="40dp"
                android:paddingVertical="12dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

            <!-- Register Button -->
            <Button
                android:id="@+id/btnTakeToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/black"
                android:paddingHorizontal="40dp"
                android:paddingVertical="12dp"
                android:text="@string/register_page"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />

            <!-- Or Log in with TextView -->
            <TextView
                android:id="@+id/tvOrLoginWith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_log_in_with"
                android:textColor="@android:color/black"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnTakeToRegister"
                android:layout_marginTop="16dp" />

            <!-- LinearLayout for Google and Biometric ImageViews -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tvOrLoginWith"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp">

                <!-- Google Sign-In ImageView -->
                <ImageView
                    android:id="@+id/imgGoogleSignIn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/glogo"
                    android:contentDescription="@string/google_sign_in"
                    android:layout_marginEnd="24dp" />

                <!-- Biometric ImageView -->
                <ImageView
                    android:id="@+id/imgBiometric"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/baseline_fingerprint_24"
                    android:contentDescription="@string/biometric_log_in" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
