<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/catback"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    tools:context=".ui.home.HomeFragment">

    <!-- CardView to enclose the title and description -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="8dp"
        android:padding="16dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- Title TextView -->
            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_cattastic"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginBottom="16dp"
                android:gravity="center" />

            <!-- About Text -->
            <TextView
                android:id="@+id/aboutTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="16dp"
                android:text="@string/cattastic_is_your_one_stop_app_for_all_things_related_to_cats_learn_about_different_breeds_find_shelters_and_explore_features_that_will_help_you_adopt_and_care_for_your_feline_friends"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <!-- Privacy Policy Link -->
            <TextView
                android:id="@+id/privacy_policy_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="48dp"
                android:text="@string/privacy_policy"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
